# microsoft-clipart-gallery

./: .gitignore  LICENSE  README.md  pyproject.toml
MicrosoftClipartCatalog/: CommandLine.py  Office97.py
MicrosoftClipartCatalog/Office97/: Cag.py
