[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MicrosoftClipartCatalog"
version = "0.9.0"
description = "Parse clipart catalogs from various Microsoft Office versions."
readme = "README.md"
authors = [{ name = "npjg" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["microsoft", "reverse-engineering"]
requires-python = ">=3.9"
dependencies = [
    "self_documenting_struct>=0.9.1",
    "olefile>=0.45",
    "jsons>=1.6.2"
]

[project.urls]
Homepage = "https://github.com/npjg/microsoft-easter-eggs"

[project.scripts]
MicrosoftEasterEggs = "MicrosoftEasterEggs:CommandLine.main"